# NorseTech

./: setup.cfg
