[metadata]
name = NoRSE-Tech
author = Brandon Frostbourne
author-email = bfrostbourne@gmail.com
license = MIT
long_description = file: README.rst
requires = >=3.7
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python